<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FaceOn</string>
    <string name="win_con">Congratulations!</string>
s    <string name="win">You\'ve Won!</string>
    <string name="alas">Alas!\n You were to late.</string>
    <string name="loose">You were eliminated.</string>
    <string name="back_button">Back</string>
    <string name="Challenge">You received a Challenge!</string>
    <string name="selfie_button">Take a selfie</string>
    <string name="keep">You can still follow\n the group challenge</string>
    <string name="hello_world">Hello World!</string>
    <string name="smear">Smear it in their faces by sending\n your Victory selfie!</string>
    <string name="win_button">In your face!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_addGroup">Add Group</string>
    <string name="title_activity_add_group_conversation">Add Group</string>
    <string name="title_activity_add_friends">AddFriends</string>
    <string name="addGroupParticipants">Add Group Participants</string>
    <string name="title_activity_select_friends">SelectFriends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_groups">Edit Groups</string>
    <string name="title_activity_win">Win</string>
    <string name="title_activity_loose">loose</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_contacts">contacts</string>
    <string name="action_group">Edit Group</string>
    <string name="action_person">Profile</string>
    <string name="title_activity_invitation">InvitationActivity</string>
    <string name="title_activity_challenge_progress">ChallengeProgressActivity</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="message_elipses">Message...</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="action_ok">OK</string>

</resources>
